--- a/Lab3/Lab3Anna/task3_Anna.css
+++ b/Lab3/Lab3Anna/task3_Anna.css
@@ -6,7 +6,7 @@
     align-items: center;
     justify-content: center;
 }
-.logo h1 {
+.logo h1{
     position: relative;
     background-color: #ffb16b;
     color: black;
@@ -18,7 +18,7 @@
     margin: 0;
     display: inline-block;
 }
-ul {
+ul{
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -28,25 +28,19 @@ ul {
     justify-content: center;
 
 }
-
-li {
+li{
     float: left;
     width: 15%;
     margin: 10px;
     background-color: #ffb16b;
 }
-
-li a {
+li a{
     display: block;
     color: black;
     text-align: center;
     font-family: Calibri;
     padding: 16px;
     text-decoration: none;
-}
-
-li a:hover {
-
 }
 .notlogo{
     background: #fcfcfba1;
@@ -78,8 +72,7 @@ li a:hover {
     flex-direction: row;
     flex-wrap: nowrap;
 }
-.main_item
-{
+.main_item{
     padding: 10px;
     border-radius: 10px;
     border: solid black;
@@ -101,11 +94,13 @@ li a:hover {
     margin-left: 5%;
     margin-right: 1%;
     width:39%;
+    display: flex;
     height: 26%;
 }
 .main_imgs{
     height: 70%;
     position:relative;
+    display: flex;
     width:100%;
 }
 .level1{
@@ -120,15 +115,8 @@ li a:hover {
 .bottom{
     width: 100%;
 }
-
-.box {
+.box{
     display: flex;
     align-items: center;
     justify-content: center;
-}
-
-.caption{
-    font-size: 24px;
-    text-align: center;
-    color: #5C2610;
 }
